--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "test_rs"
+name = "tiny_fl"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "tflc"
 
 [dependencies]
+clap="3.1"
 z3={version="0.11.2", features = ["static-link-z3"]}
