Setup `z3-static` feature
The purpose of this feature is to prevent statically linking against Z3
unless this is actually requested.  That's because it takes some time to
do this.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,12 @@ name = "tiny_fl"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+z3-static=[ "z3" ]
+
 [[bin]]
 name = "tflc"
 
 [dependencies]
 clap="3.1"
-z3={version="0.12", features = ["static-link-z3"]}
+z3={version="0.12", features=["static-link-z3"], optional=true}
